<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginPage">

    <!-- Top Background Image -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background2" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Create\nAccount"
        android:textColor="@color/accentColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/name"
        android:drawablePadding="16dp"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColorHint="@color/accentColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/accentColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />



    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/password"
        android:drawablePadding="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/accentColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/toMain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/toMain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:srcCompat="@drawable/btn_arraw1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toMain2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFb"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn"
            android:drawableEnd="@drawable/facebook"
            android:padding="16dp"
            android:text="@string/facebook"
            android:textColor="@color/accentColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/google"
            android:padding="16dp"
            android:text="@string/google"
            android:textColor="@color/accentColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!-- Forgot Password Text -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/foPass"
        android:textColor="#E00A47D5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toMain2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.5"
        android:checkedButton="@id/maleR"
       >

        <RadioButton
            android:id="@+id/maleR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/accentColor"
            android:buttonTint="#747692"
            android:layout_marginEnd="50dp"
            />

        <RadioButton
            android:id="@+id/femaleR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/accentColor"
            android:textSize="18dp"
            android:textStyle="bold"
            android:buttonTint="#747692"
            android:layout_marginStart="50dp"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
